bare essential to make epoxy, paging and room working together

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,12 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
+kapt {
+    correctErrorTypes = true
+}
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -31,4 +37,17 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    implementation 'com.airbnb.android:epoxy:3.6.0'
+    kapt 'com.airbnb.android:epoxy-processor:3.6.0'
+    implementation 'com.airbnb.android:epoxy-paging:3.6.0'
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1"
+
+    implementation "androidx.room:room-common:2.1.0"
+    implementation "androidx.room:room-runtime:2.1.0"
+    kapt "androidx.room:room-compiler:2.1.0"
+
+    implementation "androidx.lifecycle:lifecycle-runtime:2.0.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
 }
